# DoubletDetection

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  LICENSE.txt  README.md  adamwork.py  classifiers.py  classify.py  detect.py  doublet_rate_test.py  doubletdetection.py  explore.py  jonathanwork.py  miscellaneous.py  pyproject.toml  readthedocs.yaml  requirements.txt  results-25to1000by25-100runs_each.txt  setup.cfg  setup.py  simulation_script.py  synthetic.py  test_run.py  test_script.py  top_var_genes_test.py  unittests.py  utils.py  validation_script.py  visualization_script.py  visualize.py  walkthrough.ipynb
.github/workflows/: test.yml
docs/: PBMC_8k_vignette.ipynb  api.md  api.rst  conf.py  doubletdetection.doubletdetection.rst  doubletdetection.plot.rst  doubletdetection.rst  index.md  index.rst  plot.rst  readthedocs.yaml  requirements.txt  tutorial.ipynb  tutorial.nblink
doubletdetection/: __init__.py  doubletdetection.py  plot.py
src/doubletdetection/: __init__.py  doubletdetection.py  plot.py
tests/: test_package.py
tests/notebooks/: PBMC_10k_vignette.ipynb  PBMC_8k_vignette.ipynb
