[tool.poetry]
authors = ["Adam Gayoso <adamgayoso@berkeley.edu>", "Jonathan Shor <jonathan.shor@nyu.edu>", "Ambrose Carr"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
description = "Method to detect and enable removal of doublets from single-cell RNA-sequencing."
documentation = "https://doubletdetection.readthedocs.io/"
homepage = "https://github.com/JonathanShor/DoubletDetection"
license = "MIT"
name = "doubletdetection"
packages = [
  {include = "doubletdetection"},
]
readme = "README.md"
version = "4.0"

[tool.poetry.dependencies]
anndata = ">=0.6"
black = {version = ">=20.8b1", optional = true}
flake8 = {version = ">=3.7.7", optional = true}
furo = {version = "*", optional = true}
ipywidgets = "*"
leidenalg = "*"
louvain = "*"
matplotlib = ">=3.1"
myst-parser = {version = "*", optional = true}
nbsphinx = {version = "*", optional = true}
nbsphinx-link = {version = "*", optional = true}
numpy = ">=1.14.2"
pandas = ">=0.22.0"
phenograph = "*"
pre-commit = {version = ">=2.7.1", optional = true}
pytest = {version = ">=4.4", optional = true}
python = ">=3.6.1,<4.0"
scanpy = ">1.4.4"
scipy = ">=1.0.1"
sphinx = {version = ">=4.1,<4.4", optional = true}
sphinx-autodoc-typehints = {version = "*", optional = true}
tqdm = "*"

[tool.poetry.extras]
dev = ["black", "pytest", "flake8", "pre-commit"]
docs = ["nbsphinx", "sphinx", "sphinx-autodoc-typehints", "nbsphinx-link", "furo", "myst-parser"]

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.venv
  )/
)
'''
include = '\.pyi?$'
line-length = 99
target_version = ['py37']

[build-system]
build-backend = "poetry.masonry.api"
requires = [
  "poetry>=1.0",
  "setuptools", # keep it here or "pip install -e" would fail
]
