[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doubletdetection"
version = "4.2"
description = "Method to detect and enable removal of doublets from single-cell RNA-sequencing."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Adam Gayoso", email = "adamgayoso@berkeley.edu" },
    { name = "Jonathan Shor", email = "jonathan.shor@nyu.edu" },
    { name = "Ambrose Carr" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "anndata>=0.6",
    "numpy>=1.14.2",
    "pandas>=0.22.0",
    "scipy>=1.0.1",
    "scanpy>1.4.4",
    "matplotlib>=3.1",
    "tqdm",
    "ipywidgets",
    "phenograph",
    "louvain",
    "leidenalg",
]

[project.urls]
Documentation = "https://doubletdetection.readthedocs.io/"
Homepage = "https://github.com/JonathanShor/DoubletDetection"

[project.optional-dependencies]
dev = ["black>=20.8b1", "flake8>=3.7.7", "pre-commit>=2.7.1", "pytest>=4.4"]
docs = [
    "sphinx>=4.1,<4.4",
    "sphinx-autodoc-typehints",
    "nbsphinx",
    "nbsphinx-link",
    "furo",
    "myst-parser",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.venv
  )/
)
'''
